--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,8 @@
 interfaces_use_networkmanager: "{{ ansible_facts.os_family == 'RedHat' and ansible_facts.distribution_major_version | int >= 9 }}"
 interfaces_use_nmconnection: "{{ ansible_facts.os_family == 'RedHat' and ansible_facts.distribution_major_version | int >= 9 }}"
 
+interfaces_networkmanager_configs: {}
+
 interfaces_pkg_state: present
 interfaces_route_tables: []
 interfaces_ether_interfaces: []
