--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,9 @@
 
 - include_tasks: "{{ ansible_facts.os_family | lower }}.yml"
 
+- import_tasks: 'networkmanager_configs.yml'
+  tags: configuration
+
 - import_tasks: 'route_table_configuration.yml'
   tags: configuration
 
