--- a/tasks/networkmanager_configs.yml
+++ b/tasks/networkmanager_configs.yml
@@ -4,8 +4,8 @@
     dest: "{{ interfaces_nm_config_path }}/{{ item.key}}"
     owner: root
     group: root
-    permissions: '0640'
+    mode: '0640'
     content: "{{ item.value | community.general.to_ini }}"
   notify: Reload NetworkManager
-  loop: "{{ lookup('dict', interfaces_networkmanager_configs) }}"
+  loop: "{{ lookup('dict', interfaces_networkmanager_configs, wantlist=True) }}"
   tags: configurations
